syntax = "proto3";

package customer;

option go_package = "github.com/tunvx/simplebank/grpc/pb/management/customer";

message VerifyEmailRequest {
    int64 email_id = 1;
    string secret_code = 2;
}

message VerifyEmailResponse {
    bool is_verified = 1;
} 